# MIEIC-CAL

./: .gitignore  CMakeLists.txt  GraficoAlg2Relatorio.csv  GraficoAlg4Relatorio.csv  GraficoDFSRelatorio.csv  README.md  Relatório-CAL.docx  main.cpp  ~$latório-CAL.docx  ~WRL2485.tmp
Exercícios/Pratica1/cal_fp01_CLion/Tests/: Change.cpp  Factorial.cpp  Partitioning.cpp  Sum.cpp  Sum.h  tests.cpp
Exercícios/Pratica2/cal_fp02_CLion/Tests/: Labirinth.cpp  Labirinth.h  Sudoku.cpp  Sudoku.h
Exercícios/Pratica3/cal_fp03_CLion/Tests/: NearestPoints.cpp
Exercícios/Pratica4/cal_fp04_CLion/Tests/: Graph.h  tests.cpp
Exercícios/Pratica5/cal_fp05_CLion/Tests/: Graph.h  MutablePriorityQueue.h  tests.cpp
Exercícios/Pratica6/cal_fp06_CLion/: FichaJUNG.cpp
Exercícios/Pratica7/cal_fp07_CLion/Tests/: Graph.h
GraphViewerLib/: GraficoAlg1.csv  GraficoAlg4.csv  GraficoDFS.csv  GraficoFase1.csv  GraficoFase2.csv  graphviewer.cpp
Projeto/: GraficoDijkstraRelatorio.csv  PercursosCAL.txt  Relatório-CAL.docx
Projeto/GraphViewerLib/: GraficoAlg2.csv  GraficoConetividade.csv  GraficoDFS.csv  GraficoDijkstra.csv  GraficoFase1.csv
Projeto/files/: clientes.txt  estafetas.txt  restaurantes.txt  transportes.txt
Projeto/src/: Algoritmos.h  Graph.h  MutablePriorityQueue.h  Restaurante.h
files/: clientes.txt  estafetas.txt  restaurantes.txt
maps/Personalizado/: edges.txt
src/: Algoritmos.h  AnaliseTempo.h  Cliente.cpp  Cliente.h  Conetividade.h  EatExpress.cpp  EatExpress.h  Estafeta.cpp  Estafeta.h  Graph.h  MeioTransporte.cpp  MeioTransporte.h  Menus.cpp  Menus.h  MutablePriorityQueue.h  Pedido.cpp  Pedido.h  Prato.cpp  Prato.h  Restaurante.cpp  Restaurante.h  main.cpp  utils.cpp  utils.h
(+1 files in other folders)
